--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        
     </div>
     <div class="result"></div>
-    <div class="score"><span class="win">win: 0</span>  <span class="lose">lose:0</span></div>
+    <div class="score">win: <span class="win"></span>  lose: <span class="lose"></span></div>
  
     </div>
     <script src="index.js"></script>
