--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
    
     <div class="choice-wrapper js-choiceWrapper">
-        <div class="color1 js-choiceLeft"> left </div>
-        <div class="color2 js-choiceRight"> right </div>
-        <div class="color3 js-choiceUp"> up </div>
-        <div class="color4 js-choiceDown"> down </div>
+        <div class="color1 js-choiceLeft"><div class="js-correctPop">GOOD!</div></div>
+        <div class="color2 js-choiceRight"><div class="js-correctPop">GOOD!</div></div>
+        <div class="color3 js-choiceUp"><div class="js-correctPop">GOOD!</div></div>
+        <div class="color4 js-choiceDown"><div class="js-correctPop">GOOD!</div></div>
        
     </div>
     <div class="result"></div>
